--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Ad SDK -->
-    <script src='//libtl.com/sdk.js' data-zone='9745051' data-sdk='show_9745051'></script>
+    <script src='//libtl.com/sdk.js' data-zone='10397973' data-sdk='show_10397973'></script>
     <style>
         /* Custom styles for animations and aesthetics */
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
@@ -128,7 +128,7 @@
 
         const translations = {
             en: { main_title: "Webapp Sikho", main_subtitle: "Watch Ads, Unlock, and Download Files for Free!", search_placeholder: "Search for files...", available_files: "Available Files", no_results_text: "No files found matching your search.", no_slides: "No promotional slides available.", slides_error: "Could not load slides.", no_files_uploaded: "No files have been uploaded yet.", files_error: "Could not load files. Please try again later.", unlock_button: "Unlock ({adCount}/{requiredCount})", download_now_button: "Download Now", toast_download_starting: "Your download is starting...", toast_progress: "Progress: {adCount}/{requiredCount}", toast_unlocked: "Download unlocked!", toast_ad_error: "Could not load ad. Please try again.", loading_ad: "Loading ad...", verifying_button: "Please wait {countdown}s", },
-            hi: { main_title: "वेबऐप सीखो", main_subtitle: "विज्ञापन देखें, अनलॉक करें और मुफ्त में फाइलें डाउनलोड करें!", search_placeholder: "फ़ाइलों के लिए खोजें...", available_files: "उपलब्ध फाइलें", no_results_text: "आपकी खोज से कोई फ़ाइल मेल नहीं खाती।", no_slides: "कोई प्रचार स्लाइड उपलब्ध नहीं है।", slides_error: "स्लाइड लोड नहीं हो सकीं।", no_files_uploaded: "अभी तक कोई फ़ाइल अपलोड नहीं की गई है।", files_error: "फ़ाइलें लोड नहीं हो सकीं। कृपया बाद में पुनः प्रयास करें।", unlock_button: "अनलॉक ({adCount}/{requiredCount})", download_now_button: "अभी डाउनलोड करें", toast_download_starting: "आपका डाउनलोड शुरू हो रहा है...", toast_progress: "प्रगति: {adCount}/{requiredCount}", toast_unlocked: "डाउनलोड अनलॉक हो गया!", toast_ad_error: "विज्ञापन लोड नहीं हो सका। कृपया पुनः प्रयास करें।", loading_ad: "विज्ञापन लोड हो रहा है...", verifying_button: "कृपया प्रतीक्षा करें... {countdown}s", },
+            hi: { main_title: "वेबऐप सीखो", main_subtitle: "विज्ञापन देखें, अनलॉक करें और मुफ्त में फाइलें डाउनलोड करें!", search_placeholder: "फ़ाइलों के लिए खोजें...", available_files: "उपलब्ध फाइलें", no_results_text: "आपकी खोज से कोई फ़ाइल मेल नहीं खाती।", no_results_text: "कोई प्रचार स्लाइड उपलब्ध नहीं है।", slides_error: "स्लाइड लोड नहीं हो सकीं।", no_files_uploaded: "अभी तक कोई फ़ाइल अपलोड नहीं की गई है।", files_error: "फ़ाइलें लोड नहीं हो सकीं। कृपया बाद में पुनः प्रयास करें।", unlock_button: "अनलॉक ({adCount}/{requiredCount})", download_now_button: "अभी डाउनलोड करें", toast_download_starting: "आपका डाउनलोड शुरू हो रहा है...", toast_progress: "प्रगति: {adCount}/{requiredCount}", toast_unlocked: "डाउनलोड अनलॉक हो गया!", toast_ad_error: "विज्ञापन लोड नहीं हो सका। कृपया पुनः प्रयास करें।", loading_ad: "विज्ञापन लोड हो रहा है...", verifying_button: "कृपया प्रतीक्षा करें... {countdown}s", },
             bn: { main_title: "ওয়েবঅ্যাপ শিখুন", main_subtitle: "বিজ্ঞাপন দেখুন, আনলক করুন এবং বিনামূল্যে ফাইল ডাউনলোড করুন!", search_placeholder: "ফাইলের জন্য অনুসন্ধান করুন...", available_files: "উপলব্ধ ফাইল", no_results_text: "আপনার অনুসন্ধানের সাথে মেলে এমন কোনো ফাইল পাওয়া যায়নি।", no_slides: "কোন প্রচারমূলক স্লাইড উপলব্ধ নেই।", slides_error: "স্লাইড লোড করা যায়নি।", no_files_uploaded: "এখনো কোনো ফাইল আপলোড করা হয়নি।", files_error: "ফাইল লোড করা যায়নি। অনুগ্রহ করে পরে আবার চেষ্টা করুন।", unlock_button: "আনলক করুন ({adCount}/{requiredCount})", download_now_button: "এখনই ডাউনলোড করুন", toast_download_starting: "আপনার ডাউনলোড শুরু হচ্ছে...", toast_progress: " অগ্রগতি: {adCount}/{requiredCount}", toast_unlocked: "ডাউনলোড আনলক করা হয়েছে!", toast_ad_error: "বিজ্ঞাপন লোড করা যায়নি। অনুগ্রহ করে আবার চেষ্টা করুন।", loading_ad: "বিজ্ঞাপন লোড হচ্ছে...", verifying_button: "অনুগ্রহ করে অপেক্ষা করুন... {countdown}s", }
         };
 
@@ -218,7 +218,6 @@
                         slideEl.className = 'slider-item';
                         const imageHTML = `<img src="${slide.imageUrl}" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/1280x400/cccccc/ffffff?text=Image+Not+Found';">`;
                         
-                        // FIX APPLIED HERE: Added 'text-[0px]' and 'block' classes to hide unwanted text
                         slideEl.innerHTML = slide.linkUrl 
                             ? `<a href="${slide.linkUrl}" target="_blank" rel="noopener noreferrer" class="block w-full h-full text-[0px]">${imageHTML}</a>` 
                             : imageHTML;
@@ -313,16 +312,33 @@
             }
         }
 
+        // --- UPDATED DOWNLOAD FUNCTION ---
         function handleDownloadClick(e) {
             const button = e.target.closest('.download-btn');
             if (!button || button.disabled) return;
+            e.preventDefault();
+
             const fileId = button.dataset.id;
             const downloadUrl = button.dataset.url;
             const requiredCount = parseInt(button.dataset.requiredAds);
             const adCount = parseInt(localStorage.getItem(`adCount_${fileId}`) || 0);
+
+            // Validation
+            if (!downloadUrl || downloadUrl === "undefined" || downloadUrl === "") {
+                alert("Download link not available.");
+                return;
+            }
+
             if (adCount >= requiredCount) {
                 showToast('toast_download_starting');
-                window.open(downloadUrl, '_blank');
+                setTimeout(() => {
+                    // Try opening in new tab
+                    const newWindow = window.open(downloadUrl, '_blank');
+                    // Fallback for pop-up blockers or mobile behavior
+                    if (!newWindow || newWindow.closed || typeof newWindow.closed == 'undefined') {
+                        window.location.href = downloadUrl;
+                    }
+                }, 1000);
                 return;
             }
             processAdUnlock(button);
