--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script>(function(s){s.dataset.zone='10400174',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
     <script src="https://quge5.com/88/tag.min.js" data-zone="197733" async data-cfasync="false"></script>
     <script>(function(s){s.dataset.zone='10400191',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+    <script src="https://quge5.com/88/tag.min.js" data-zone="197733" async data-cfasync="false"></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
